--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ werkzeug==2.0.3
 tensorflow-cpu==2.15.0
 opencv-python==4.7.0.72
 numpy>=1.23.5,<2.2.0
+flask-cors
 pillow>=9.4.0
 scikit-learn==1.2.2
 keras==2.15.0
