--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+pip>=25.2
+setuptools>=65.5.0
+wheel>=0.41.2
+Cython>=0.29.34
+
 flask==2.0.1
 werkzeug==2.0.3
 tensorflow-cpu==2.20.0
@@ -5,9 +10,9 @@ opencv-python==4.7.0.72
 numpy>=1.23.5,<2.2.0
 flask-cors
 pillow>=9.4.0
-scikit-learn==1.2.2
+scikit-learn==1.5.1
 keras==2.15.0
 protobuf>=3.20.3,<6.0.0
 h5py>=3.1.0
-six>=1.15.0 
+six>=1.15.0
 gunicorn
